# HookX

./: AUTOMATIC_SETUP.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  address_config_example.md  broadcast_sender.cpp  hook_dll.cpp  hookx.cpp  sample_addresses.txt  test_addresses.txt  test_client.cpp  vcpkg.json
